# repo-rs

./: .gitignore  Cargo.toml  _git-journal
ci/: build-release.sh  check-msrv.sh  lint-and-test.sh  vars.yaml
src/: cli.rs  config.rs  error.rs  github.rs  main.rs  repo.rs
