[package]
name = "repo-rs"
version = "0.2.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"

[[bin]]
bench = false
path = "src/main.rs"
name = "repo-rs"

[profile.release]
lto = true

[dependencies]
clap = "2.33"
colored = "2"
dirs = "3"
futures = "0.3"
git2 = "0.13"
# Until my patch is merged, we hve to fetch from gitlab
# github_v3 = "0.3.2"
github_v3 = { git = "https://gitlab.com/mchunlum/crates.rs.git", branch = "fixing-git" }
indicatif = "0.16"
prettytable-rs = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
