[package]
name = "repo-rs"
version = "0.2.1"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"
rust-version = "1.65.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "repo-rs"

[profile.release]
lto = true

[dependencies]
clap = "=2.33"
colored = "2"
dirs = "5"
futures = "0.3"
git2 = { version = "0.16", features = ["vendored-openssl"] }
github_v3 = "1.0.3"
indicatif = "0.16"
prettytable-rs = "0.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
